--- a/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall-in-text-service-norwegian-chapter-input/Api - identify-vessel-length-overall-in-text-service-norwegian-chapter-input.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall-in-text-service-norwegian-chapter-input/Api - identify-vessel-length-overall-in-text-service-norwegian-chapter-input.ipynb
@@ -45,22 +45,22 @@
       "Requirement already satisfied: spacy==2.3.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
       "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
       "\n",
-      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\n",
+      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
+      "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
       "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
       "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
-      "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
-      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
-      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
-      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.2)\n"
      ]
     }
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: numpy==1.19.3 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.19.3)\n",
-      "WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+      "Requirement already satisfied: numpy==1.19.3 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.19.3)WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
+      "\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1129,10 +1129,10 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '10',\n",
        "  'part_number': '10'},\n",
@@ -1140,20 +1140,20 @@
        "  'length_separator': 'og',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '15',\n",
        "  'part_number': '1'},\n",
        " {'length_value': '10,67',\n",
        "  'measurement': 'meter',\n",
        "  'length_prefix': 'mindre enn',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '15',\n",
        "  'part_number': '4'},\n",
@@ -1161,20 +1161,20 @@
        "  'length_separator': 'og',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '16',\n",
        "  'part_number': '1'},\n",
        " {'length_value': '10,67',\n",
        "  'measurement': 'meter',\n",
        "  'length_prefix': 'under',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '16',\n",
        "  'part_number': '2'},\n",
@@ -1182,10 +1182,10 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '1'},\n",
@@ -1193,10 +1193,10 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '2'},\n",
@@ -1204,10 +1204,10 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '3'},\n",
@@ -1215,10 +1215,10 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '4'},\n",
@@ -1226,17 +1226,17 @@
        "  'length_separator': 'til',\n",
        "  'length_value_2': '15',\n",
        "  'measurement': 'meter',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '24',\n",
        "  'part_number': '1'}]"
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 8
     }
    ],
    "source": [
